  * Add the following method to Sort class
    sort_byte_asc
    sort_byte_desc
    sort_double_asc
    sort_double_desc
    sort_float
    sort_float_asc
    sort_int_asc
    sort_int_desc
    sort_long_asc
    sort_long_desc
    sort_short_asc
    sort_short_desc
    sort_string_asc
    sort_string_desc
  * Time->timegm is implemented using timegm on UNIX/Linux or _mkgmtime on Windows.
  
  [NON BACKWORD COMPATIBLE CHANGES]
  * The following methods are moved from Fn class to Sort class.
    sort_byte
    sort_double
    sort_float
    sort_int
    sort_long
    sort_object
    sort_short
    sort_string

0.9608 2022-06-16
  [CHANGE]
  * Add "--genlib" option to "spvmdist" command.
  * Add "--print-dependent-resources" and "-p" options to "spvmcc" command.
  [BUG FIX]
  * Fix the bug that spvmcc don't set @INC to the value of -I.
  * Fix many bugs of the resource sysmtem of "spvmcc" command.
  [NON BACKWORD COMPATIBLE CHANGES]
  * remove "dynamic-lib" option form "spvmcc" command.
  * remove "static-lib" option form "spvmcc" command.
  
0.9607 2022-06-15
  [CHANGE]
  * Add the following methods to Fn class
    static method memset_byte : void ($dest : byte[], $dest_offset : int, $value : byte, $length : int)
    static method memset_double : void ($dest : double[], $dest_offset : int, $value : double, $length : int)
    static method memset_float : void ($dest : float[], $dest_offset : int, $value : float, $length : int)
    static method memset_int : void ($dest : int[], $dest_offset : int, $value : int, $length : int)
    static method memset_long : void ($dest : long[], $dest_offset : int, $value : long, $length : int)
    static method memset_short : void ($dest : short[], $dest_offset : int, $value : short, $length : int)
    static method memset_object : void ($dest : object[], $dest_offset : int, $value : object, $length : int)