@@ -18,6 +18,133 @@ class TestCase::LogicalOperator {
       }
     }
     
+    {
+      my $ret = 0 || 0;
+      unless ($ret == 0) {
+        return 0;
+      }
+    }
+    
+    {
+      my $ret = 0 || 1;
+      unless ($ret == 1) {
+        return 0;
+      }
+    }
+    
+    # This return -1. This is not wrong. If the type of conditional operand is int, return the last evaluated value.
+    {
+      my $ret = 0 || -1;
+      unless ($ret == -1) {
+        return 0;
+      }
+    }
+    
+    {
+      my $ret = !(0 || -1);
+      unless ($ret == 0) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = 0 || -1.0;
+      unless ($ret == 1) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = 0 || -1L;
+      unless ($ret == 1) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = 1 && 0;
+      unless ($ret == 0) {
+        return 0;
+      }
+    }
+    
+    {
+      my $ret = 1 && 1;
+      unless ($ret == 1) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = 1 && -1;
+      unless ($ret == -1) {
+        return 0;
+      }
+    }
+    
+    {
+      my $ret = !(1 && -1);
+      unless ($ret == 0) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = 1 && -1.0;
+      unless ($ret == 1) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = 1 && -1L;
+      unless ($ret == 1) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = 0 || -1 || 0;
+      unless ($ret == -1) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = -1 || 0;
+      unless ($ret == -1) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = 0 || -1;
+      unless ($ret == -1) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = -1 || 1 && 1;
+      unless ($ret == -1) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = 1 && -1 || 0;
+      unless ($ret == -1) {
+        return 0;
+      }
+    }
+
+    {
+      my $ret = -1 && 1 || 0;
+      unless ($ret == 1) {
+        return 0;
+      }
+    }
+    
     return 1;
   }
   
